docs/grammar.ebnf
/* Neuro Formal Grammar Specification */

Program         ::= { FunctionDecl }
FunctionDecl    ::= "fn" Id "(" [ParamList] ")" ["->" Type] Block
ParamList       ::= Param { "," Param }
Param           ::= Id ":" Type

Block           ::= "{" { Statement } "}"

Statement       ::= LetStmt | AssignStmt | IfStmt | WhileStmt | ReturnStmt | ExprStmt

LetStmt         ::= "let" ["mut"] Id ":" Type "=" Expr ";"
AssignStmt      ::= Id "=" Expr ";"
IfStmt          ::= "if" "(" Expr ")" Block [ "else" Block ]
WhileStmt       ::= "while" "(" Expr ")" Block
ReturnStmt      ::= "return" [Expr] ";"
ExprStmt        ::= Expr ";"

Expr            ::= LogicalOrExpr
LogicalOrExpr   ::= LogicalAndExpr { "||" LogicalAndExpr }
LogicalAndExpr  ::= EqualityExpr { "&&" EqualityExpr }
EqualityExpr    ::= RelationalExpr { ("==" | "!=") RelationalExpr }
RelationalExpr  ::= AdditiveExpr { ("<" | ">" | "<=" | ">=") AdditiveExpr }
AdditiveExpr    ::= MultiplicativeExpr { ("+" | "-") MultiplicativeExpr }
MultiplicativeExpr ::= UnaryExpr { ("*" | "/") UnaryExpr }
UnaryExpr       ::= ["-" | "!"] PrimaryExpr

PrimaryExpr     ::= Num | FloatNum | Bool | String | Id | "(" Expr ")" | FuncCall
FuncCall        ::= Id "(" [ArgList] ")"
ArgList         ::= Expr { "," Expr }

Type            ::= "int" | "float" | "bool" | "string"
